# CAENAnalysis

./: CMakeLists.txt  README.md  setup.sh
execute/: CMakeLists.txt  data_decode.cpp  main.cpp  raw_analysis.cpp  show_histgrams.cpp
include/: RawAnalysis.hpp  ReadTxtData.hpp  ReadTxtData.hpp~  ShowHistgrams.hpp
parameter/: parameter1.json
scripts/: CmakeMake.sh  Decode.sh  RawAnalysis.sh  ShowHistgrams.sh  parameters.json
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  RawAnalysis.cpp  ReadTxtData.cpp  ReadTxtData.cpp~  ShowHistgrams.cpp  cmake_install.cmake  good_morning.cpp  hello.cpp
